# dead-inside-backend

./: .gitignore  README.md  pyproject.toml  test_faster_whisper.py
app/: main.py
app/api/: main.py
app/api/routes/: chat.py  legacy_chat.py  private.py  root.py  test.py
app/core/: config.py  llm.py  redis_client.py  speech_to_text.py  text_to_speech.py
archived/: benchmark_speech_to_text.py  benchmark_tts.py  fetch_all_redis.py  openai_tts.txt  speech_to_text.py  test_faster_whisper.py  test_redis_connection.py
tests/: test_character_generation.py  test_chat_conversations.py  test_zombie_interaction.py
